# MCliPPy

./: .env.example  README.md  ascii.txt  assistant.py  calendar_utils.py  chat.py  config_manager.py  llm_processor.py  mcp_handler.py  notifier.py  pyproject.toml  requirements.txt  testfreeslots.py  user_interface.py
